# rust_grpc

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
migrations/: 01_schema.ddl.sql
proto/: quote.proto
src/: client.rs  server.rs
src/quote_model/: mod.rs  model.rs
src/quote_repository/: mod.rs  repository.rs
