[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
needless_lifetimes = "allow"
pedantic = "warn"
nursery = "warn"
all = "warn"
needless_return = "allow"

[[bin]] # Bin to run the gRPC server
name = "quote-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "quote-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
uuid = { version = "1.4.0", features = ["v4", "serde"]}
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.7.2", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"]}

[build-dependencies]
tonic-build = "0.11.0"
